# coredata-rs

./: .gitignore  CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_in_memory_smoke.rs  02_persistent_container_basic.rs  03_managed_object_context_lifecycle.rs  04_managed_object_state.rs  05_entity_description_metadata.rs  06_fetch_request_options.rs  07_ns_predicate_substitution.rs  08_history_tracking.rs  09_cloudkit_mirroring_options.rs  10_batch_operation_sqlite.rs  11_persistent_store_coordinator_admin.rs  12_relationship_description_links.rs  13_validation_rules.rs  14_fetched_results_controller.rs  15_migration_and_mapping.rs  16_async_api.rs
examples/support/: mod.rs
src/: async_api.rs  batch_operation.rs  cloudkit_mirroring.rs  constants.rs  context.rs  custom_store.rs  entity_description.rs  error.rs  fetch_request.rs  fetched_results_controller.rs  ffi.rs  history.rs  lib.rs  managed_object.rs  managed_object_context.rs  merge_policy.rs  migration.rs  migration_support.rs  model.rs  model_metadata.rs  ns_predicate.rs  persistent_container.rs  persistent_store_coordinator.rs  persistent_store_request.rs  private.rs  query.rs  query_generation.rs  relationship_description.rs  schema.rs  spotlight.rs  store.rs  validation.rs  value.rs
src/ffi/: async_api.rs  batch_operation.rs  constants.rs  (+19 more)
swift-bridge/: Package.swift
tests/: async_api_tests.rs  batch_operation_tests.rs  cloudkit_mirroring_tests.rs  entity_description_tests.rs  fetch_request_tests.rs  fetched_results_controller_tests.rs  history_tests.rs  managed_object_context_tests.rs  managed_object_tests.rs  migration_tests.rs  ns_predicate_tests.rs  persistent_container_tests.rs  persistent_store_coordinator_tests.rs  relationship_description_tests.rs  validation_tests.rs
(+30 files in other folders)
