[package]
name = "coredata"
version = "0.3.8"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/coredata-rs"
repository = "https://github.com/doom-fish/coredata-rs"
description = "Safe Rust bindings for Apple's CoreData framework — containers, contexts, history, CloudKit mirroring, and batch operations on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["coredata", "macos", "apple", "persistence", "database"]
categories = ["api-bindings", "os::macos-apis", "database"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "COVERAGE.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "coredata"
crate-type = ["lib"]

[features]
default = []
async = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
doom-fish-utils = { path = "../doom-fish-utils", version = ">=0.1, <0.4" }

[dev-dependencies]
pollster = "0.3"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_in_memory_smoke"

[[example]]
name = "16_async_api"
required-features = ["async"]

[[test]]
name = "async_api_tests"
required-features = ["async"]

[profile.release]
debug = "full"
strip = "none"
